update live site

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+      "update-live": "git add . && git commit -m \"update live site\" && git push origin main && npm run deploy"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
